fix mobile hover background overlapping

--- a/docs/_sass/jekyll-theme-cayman.scss
+++ b/docs/_sass/jekyll-theme-cayman.scss
@@ -379,12 +379,12 @@ a {
 
 nav {
   background: $body-text-color;
-  padding: 1rem 0;
   text-align: center;
 }
 
 nav > a {
   padding: 1rem;
+  display: inline-block;
   color: $off-white;
 }
 
